correcting log setup & adding valve api tests

--- a/src/main/resources/datapipeline.properties
+++ b/src/main/resources/datapipeline.properties
@@ -1,6 +1,6 @@
 valve.api.key=
 rate.limit=1
-base.valve.api.url=https://api.steampowered.com/IDOTA2Match_570/
-get.match.history.path=GetMatchHistory/V001/
-get.match.history.by.seq.num.path=GetMatchHistoryBySeqNum/V001/
-get.match.details.path=GetMatchDetails/V001/
+base.valve.api.url=https://api.steampowered.com/
+get.match.history.path=IDOTA2Match_570/GetMatchHistory/V001/
+get.match.history.by.seq.num.path=IDOTA2Match_570/GetMatchHistoryBySeqNum/V001/
+get.match.details.path=IDOTA2Match_570/GetMatchDetails/V001/
