implementing sequence number handling

--- a/config/datapipeline.properties
+++ b/config/datapipeline.properties
@@ -4,3 +4,4 @@ base.valve.api.url=https://api.steampowered.com/
 get.match.history.path=IDOTA2Match_570/GetMatchHistory/V001/
 get.match.history.by.seq.num.path=IDOTA2Match_570/GetMatchHistoryBySequenceNum/V001/
 get.match.details.path=IDOTA2Match_570/GetMatchDetails/V001/
+sequence.number.file.path=config/seqNum.txt
