extracting hero json path to properties

--- a/config/datapipeline.properties
+++ b/config/datapipeline.properties
@@ -5,3 +5,4 @@ get.match.history.path=IDOTA2Match_570/GetMatchHistory/V001/
 get.match.history.by.seq.num.path=IDOTA2Match_570/GetMatchHistoryBySequenceNum/V001/
 get.match.details.path=IDOTA2Match_570/GetMatchDetails/V001/
 sequence.number.file.path=config/seqNum.txt
+heroes.json.file.path=config/heroes.json
