--- a/config/datapipeline.properties
+++ b/config/datapipeline.properties
@@ -1,8 +1,13 @@
+#Valve API Settings
 valve.api.key=
 rate.limit=1
 base.valve.api.url=https://api.steampowered.com/
 get.match.history.path=IDOTA2Match_570/GetMatchHistory/V001/
 get.match.history.by.seq.num.path=IDOTA2Match_570/GetMatchHistoryBySequenceNum/V001/
 get.match.details.path=IDOTA2Match_570/GetMatchDetails/V001/
+#Sequence Numbering Settings
 sequence.number.file.path=config/seqNum.txt
+#Hero Settings
 heroes.json.file.path=config/heroes.json
+#Export Settings
+export.directory.path=out
