removing old api key

--- a/config/datapipeline.properties
+++ b/config/datapipeline.properties
@@ -1,5 +1,5 @@
 #Valve API Settings
-valve.api.key=F0210D1BB29EC5AF8E0D17779E7FC018
+valve.api.key=
 rate.limit=1
 base.valve.api.url=https://api.steampowered.com/
 get.match.history.path=IDOTA2Match_570/GetMatchHistory/V001/
