adding more settings

--- a/config/datapipeline.properties
+++ b/config/datapipeline.properties
@@ -1,6 +1,6 @@
 #Valve API Settings
 valve.api.key=
-rate.limit=1
+requests.to.valve.per.second=1
 base.valve.api.url=https://api.steampowered.com/
 get.match.history.path=IDOTA2Match_570/GetMatchHistory/V001/
 get.match.history.by.seq.num.path=IDOTA2Match_570/GetMatchHistoryBySequenceNum/V001/
@@ -11,3 +11,5 @@ sequence.number.file.path=config/seqNum.txt
 heroes.json.file.path=config/heroes.json
 #Export Settings
 export.directory.path=out
+#Scrap Settings
+number.of.matches.to.scrape.for=10
